# jekko-agent

./: AGENTS.md  CHANGELOG.md  Cargo.toml  JANKURAI_TASKLIST.md  JANKURAI_TASKLIST.md.completed  Justfile  README.md  SANDBOX_WORKPLAN.md  codex-jankurai-loop.sh  jekko-jankurai-loop-common.sh  jekko-jankurai-loop-runner.sh  jekko-jankurai-loop.sh
crates/jankurai-runner/: Cargo.toml
crates/jankurai-runner/src/: bin_main.rs  bootstrap_check.rs  classifier.rs  commit.rs  daemon_store.rs  dag.rs  empty_response_tracker.rs  events.rs  evidence.rs  hashing.rs  hero_judge.rs  hero_judge_eval.rs  hero_judge_eval_io.rs  hero_judge_eval_metrics.rs  hero_judge_runner.rs  hero_judge_runner_artifacts.rs  hero_judge_runner_completion.rs  hero_judge_runner_finalize.rs  hero_judge_runner_flow.rs  hero_judge_runner_helpers.rs  hero_judge_search.rs  jankurai_gate.rs  lib.rs  locks.rs  main.rs  model_client.rs  model_policy.rs  port.rs  port_runner.rs  reasoning.rs  reasoning_artifacts.rs  reasoning_benchmark.rs  reasoning_io.rs  reasoning_parse.rs  receipts.rs  repo_graph.rs  rollback.rs  run_summary.rs  runner.rs  stage0_proof.rs  (+3 more)
crates/jankurai-runner/src/bin_main/: cli.rs  dispatch.rs  hero_series.rs
crates/jankurai-runner/src/daemon_store/: helpers.rs  model.rs  parity.rs  plan.rs  reasoning.rs  run.rs  tests.rs
crates/jankurai-runner/src/hero_judge/: artifacts.rs  config.rs  metrics.rs  population.rs  summary.rs
crates/jankurai-runner/src/hero_judge_eval_metrics/: defaults.rs  helpers.rs  lane.rs  quality.rs  review.rs
crates/jankurai-runner/src/hero_judge_runner_finalize/: artifacts.rs  inputs.rs  ledgers.rs  paths.rs  state.rs  summary.rs
crates/jankurai-runner/src/hero_judge_runner_flow/: generation.rs  setup.rs
crates/jankurai-runner/src/memory/: embedder.rs  mod.rs  retrieval.rs  tests.rs
crates/jankurai-runner/src/model_client/: budget.rs  fake.rs  labels.rs  runtime.rs  tests.rs  tool_mode.rs  types.rs
crates/jankurai-runner/src/parity_lab/: adapters.rs  artifacts.rs  checker.rs  gaps.rs  helpers.rs  mod.rs  runner.rs  types.rs
crates/jankurai-runner/src/port/: draft.rs  plan.rs  target.rs  tests.rs  validation.rs
crates/jankurai-runner/src/port_runner/: config.rs  helpers.rs  tests.rs  tick.rs
crates/jankurai-runner/src/reasoning/: artifact.rs  config.rs  graph.rs  memory.rs  tests.rs
crates/jankurai-runner/src/reasoning_runner/: mod.rs  orchestrator.rs  phases.rs  tests.rs  types.rs
crates/jankurai-runner/src/repo_graph/: builder.rs  rust_symbols.rs  (+3 more)
crates/jankurai-runner/tests/: hero_judge_tests.rs  runner_tests.rs  superreasoning_replay_tests.rs  worktree_lifecycle.rs
crates/jekko-store/: Cargo.toml  build.rs
crates/jekko-store/src/: account.rs  daemon.rs  db.rs  error.rs  lib.rs  migration.rs  project.rs  share.rs  sync.rs  workspace.rs
crates/jekko-store/tests/: account_roundtrip.rs  daemon_port_roundtrip.rs  hash_parity.rs  migration_smoke.rs  project_roundtrip.rs  session_roundtrip.rs  sync_event_roundtrip.rs
crates/sandboxctl/: Cargo.toml
crates/sandboxctl/src/: index.rs  lib.rs  main.rs  permission.rs  runid.rs  spec.rs  spec_types.rs  wrapper.rs
crates/sandboxctl/tests/: backend_common.rs  cli_smoke.rs  permission.rs  runid_smoke.rs  spec_schema.rs
(+195 files in other folders)
