[workspace]
resolver = "2"
members = [
  "crates/jankurai",
  "crates/jankurai-runner",
  "crates/sandboxctl",
  "crates/agent-search",
  "crates/jekko-store",
  "crates/jekko-core",
  "crates/zyal-core",
]

[workspace.package]
edition = "2021"
version = "2.0.6"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
