[package]
name = "jekko-store"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde"] }
hex = "0.4"
jekko-core = { path = "../jekko-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }

[build-dependencies]
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
