[package]
name = "sandboxctl"
version = "0.1.0"
edition = "2021"
publish = false
description = "Declarative sandbox-loop runtime for ZYAL/jankurai (worktree, bubblewrap, docker backends)"

[lib]
name = "sandboxctl"
path = "src/lib.rs"

[[bin]]
name = "sandboxctl"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
ulid = "1"
which = "6"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process", "fs"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = "1"
serial_test = "3"
tempfile = "3"
